a better plot label overflow fix

--- a/app/assets/stylesheets/plots.css.less
+++ b/app/assets/stylesheets/plots.css.less
@@ -9,7 +9,7 @@
     width: 400px;
     margin: 0 auto;
   }
-  overflow: hidden;
+  overflow: visible;
 }
 
 .plot-tooltip {
